# firejail

./: .gitignore  Makefile.in  configure  configure.ac  mkman.sh
data/: libexechelperutils.pc.in
debian/: changelog  control  copyright  firejail-common.install  firejail.install  libfirejail-dev.install  libfirejail-dev.install.in  lintian-overrides  rules  watch
debian/patches/: reproducible_build.patch  series
etc/: applinks.conf  disable-mgmt.inc  generic.profile  parole.profile  protected-apps.policy  protected-files.policy  restricted.profile
etc/applinks.d/: Makefile
etc/applinks.d/2ping/: linked  main
etc/applinks.d/2vcard/: main
etc/applinks.d/389-console/: linked  main
etc/applinks.d/3depict/: linked
etc/applinks.d/3dldf/: main
etc/applinks.d/4g8/: linked
etc/applinks.d/6tunnel/: main
etc/applinks.d/9menu/: main
etc/applinks.d/9wm/: linked
etc/applinks.d/a2jmidid/: linked  main
etc/applinks.d/a2mp3/: main
etc/applinks.d/a2ps/: linked  main
etc/applinks.d/a56/: linked  main
etc/applinks.d/aa3d/: main
etc/applinks.d/aaphoto/: main
etc/applinks.d/aapt/: linked  main
etc/applinks.d/abacas/: main
etc/applinks.d/abcde/: linked  main
etc/applinks.d/abcm2ps/: linked
etc/applinks.d/abduco/: main
etc/applinks.d/abi-compliance-checker/: linked
etc/applinks.d/abicheck/: linked
etc/applinks.d/abinit/: linked  main
etc/applinks.d/abiword/: linked
etc/applinks.d/abook/: linked
etc/applinks.d/abootimg/: linked  (+1 more)
src/bash_completion/: fireexecd.bash_completion  firejail.bash_completion
src/fireexecd/: Makefile.in  client.c  client_dialogs.c  client_handler.c  exechelp-dialog.c  exechelp-dialog.h  fireexecd.c  fireexecd.h  procevent.c  socket.c  usage.c  xfsm-fadeout.c  xfsm-fadeout.h
src/firejail/: Makefile.in  arp.c  bandwidth.c  caps.c  cgroup.c  cpu.c  env.c  exechelp_client.c  exechelper-datatypes.c  exechelper-logger.c  exechelper.c  firejail.h  fs.c  fs_dev.c  fs_etc.c  fs_helper.c  fs_helper_etc.c  fs_home.c  fs_hostname.c  fs_var.c  join.c  libnetlink.c  linked_resources.c  list.c  main.c  netfilter.c  network.c  network_main.c  no_sandbox.c  output.c  pid.c  profile.c  protected_resources.c  pulseaudio.c  restricted_shell.c  sandbox.c  seccomp.c  shutdown.c  syscall.c  usage.c  (+2 more)
src/firemon/: Makefile.in
src/ftee/: Makefile.in
src/include/: common.h  exechelper-datatypes.h  exechelper-logger.h  exechelper-socket.h  exechelper.h  exechelper.h.in
src/lib/: Makefile.in  common.c  exechelper-datatypes.c  exechelper-logger.c  exechelper-socket.c  exechelper.c  libexechelperutils.c  libnetlink.c  pid.c
src/libexechelper/: Makefile.in  libexechelper.c  libexechelperdecorations.c
src/libtrace/: Makefile.in
src/man/: fireexecd.txt  firejail.txt
(+11321 files in other folders)
